; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_sysrq.c___sysrq_get_key_op.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_sysrq.c___sysrq_get_key_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysrq_key_op = type { i32 }

@sysrq_key_table = common dso_local global %struct.sysrq_key_op** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sysrq_key_op* @__sysrq_get_key_op(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sysrq_key_op*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store %struct.sysrq_key_op* null, %struct.sysrq_key_op** %3, align 8
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @sysrq_key_table_key2index(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, -1
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load %struct.sysrq_key_op**, %struct.sysrq_key_op*** @sysrq_key_table, align 8
  %11 = load i32, i32* %4, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.sysrq_key_op*, %struct.sysrq_key_op** %10, i64 %12
  %14 = load %struct.sysrq_key_op*, %struct.sysrq_key_op** %13, align 8
  store %struct.sysrq_key_op* %14, %struct.sysrq_key_op** %3, align 8
  br label %15

15:                                               ; preds = %9, %1
  %16 = load %struct.sysrq_key_op*, %struct.sysrq_key_op** %3, align 8
  ret %struct.sysrq_key_op* %16
}

declare dso_local i32 @sysrq_key_table_key2index(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
